--- a/app.json
+++ b/app.json
@@ -44,6 +44,12 @@
 			[
 				"@react-native-google-signin/google-signin"
 			],
+			[
+				"expo-location",
+				{
+				  "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+				}
+			],		
 			"expo-router",
 			"expo-secure-store"
 		],
