Added image picker and location context

--- a/app.json
+++ b/app.json
@@ -49,7 +49,14 @@
 				{
 				  "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
 				}
-			],		
+			],
+			[
+				"expo-image-picker",
+				{
+				  "photosPermission": "The app accesses your photos to let you share them with your friends.",
+				  "cameraPermission": "The app accesses your camera let you share them with your friends."
+				}
+			],	
 			"expo-router",
 			"expo-secure-store"
 		],
