--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "expo-location": "~16.5.5",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-file-system": "~16.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
