--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
     "expo": "~50.0.17",
+    "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.5",
@@ -32,9 +35,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "expo-location": "~16.5.5",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.9"
+    "rn-inkpad": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
